(Ugly) fix for hardcoded dapp.ci url in klab fetch

--- a/resources/report.tmp.html
+++ b/resources/report.tmp.html
@@ -9,4 +9,7 @@
   <body>
     {{body}}
   </body>
+  <script>
+    Array.from(document.getElementsByClassName('klab-fetch')).forEach((x) => x.innerHTML = x.innerHTML.replace('http://dapp.ci', window.location.origin))
+  </script>
 </html>
